# billing-microservice

./: Cargo.toml  README.md  build.rs
locales/: en.yml
src/: main.rs  server.rs
src/config/: locale.rs  logging.rs  mod.rs  server.rs  tracing.rs
